# TOMAAT-Slicer

./: CMakeLists.txt  README.md
TOMAAT/: CMakeLists.txt  TOMAAT.py
TOMAAT/utils/: dependencies.py  tls.py  ui.py
